forgot to remove the .did file after transferer

--- a/Makefile.repo
+++ b/Makefile.repo
@@ -55,7 +55,7 @@ prels: $(patsubst %, %-prel, $(MMLLAR))
 	@$(ECHO) $(prel-tag) $*
 	@exporter -q -l mml/$*.miz > /dev/null 2>/dev/null
 	@transfer mml/$*.miz > /dev/null 2>/dev/null
-	@for ext in dno dcl dco def the sch; do \
+	@for ext in dno dcl dco def did the sch; do \
 		if test -f "mml/$*.$$ext"; then \
 			rm -f "mml/$*.$$ext"; \
 		fi \
