--- a/Makefile.corninstall
+++ b/Makefile.corninstall
@@ -23,6 +23,9 @@
 # - MAKEJOBS: default 1.  The degree of parallelization used by make
 #   when computing the initial HTML-ized presentation of the LIB
 #
+# - ALLOWSKIPPEDPROOFS: default 1.  Allow @proof (proof skipping) in
+#   articles.
+#
 # - NUM_ARTICLES: default 0.  The length of the initial segment of
 #   cornlist (taken from LIBFILES).  Set it to 0 to ensure
 #   that the whole library is used; set it to a low-value for
@@ -50,6 +53,7 @@ BARE_PUBLIC_REPO=$(PUBLIC_REPOS_BASE)/$(REPO_NAME).git
 REPOBIN=$(PUBLIC_REPO)/bin
 COQBIN=$(LIBFILES)/bin
 MAKEJOBS=1
+ALLOWSKIPPEDPROOFS=1
 CSS=article index
 JAVASCRIPT=article
 PERLSCRIPTS=
@@ -146,6 +150,7 @@ public-repo-init: public-mwiki-user scratch
 	cd $(PUBLIC_REPO) && git add . && git commit -m 'Initial commit.' \
            && git config mwiki.wikihost $(WIKIHOST) \
            && git config mwiki.makejobs $(MAKEJOBS) \
+           && git config mwiki.allowskippedproofs $(ALLOWSKIPPEDPROOFS) \
            && git config mwiki.htmldir http://$(WIKIHOST)/$(REPO_NAME)
 
 	for i in pre-commit post-commit; do \
@@ -198,6 +203,7 @@ public-repo-export: public-repo-init
            && git config mwiki.backend $(PUBLIC_REPO)/ \
            && git config mwiki.wikihost $(WIKIHOST) \
            && git config mwiki.makejobs $(MAKEJOBS) \
+           && git config mwiki.allowskippedproofs $(ALLOWSKIPPEDPROOFS) \
            && git config mwiki.htmldir http://$(WIKIHOST)/$(REPO_NAME) 
 	cd $(PUBLIC_REPO) && git remote add frontend $(BARE_PUBLIC_REPO)
 
