--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -56,7 +56,7 @@ ALLOWSKIPPEDPROOFS=1
 SHEETS=addabsrefs miz evl2dep
 CSS=article index
 JAVASCRIPT=article
-PERLSCRIPTS=mkxmlhead mkmmlindex duplicates
+PERLSCRIPTS=mkxmlhead mkmmlindex duplicates MizItemize.pl
 PERLMODULES=mizar
 GITWEB_ROOT=/var/cache/git
 NUM_ARTICLES=10
