some more scripts - harmless

--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -53,10 +53,10 @@ REPOBIN=$(PUBLIC_REPO)/bin
 MIZBIN=$(MIZFILES)/bin
 MAKEJOBS=1
 ALLOWSKIPPEDPROOFS=1
-SHEETS=addabsrefs miz evl2dep
+SHEETS=addabsrefs miz evl2dep evl2dep1
 CSS=article index
 JAVASCRIPT=article
-PERLSCRIPTS=mkxmlhead mkmmlindex duplicates MizItemize
+PERLSCRIPTS=mkxmlhead mkmmlindex duplicates duplicates1 MizItemize
 PERLMODULES=mizar
 GITWEB_ROOT=/var/cache/git
 NUM_ARTICLES=10
