using the new dependency making without the -dep files (only .dep) like in Coq

--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -1,6 +1,6 @@
 # -*- mode: makefile; -*-
 MMLMIZALL=$(shell ls *.miz)
-MMLMIZSTD=$(filter-out hidden, $(MMLMIZALL))
+MMLMIZSTD=$(filter-out hidden.miz, $(MMLMIZALL))
 MMLLAR=$(patsubst %.miz, %, $(MMLMIZSTD))
 DEP-MAKEFILES = $(patsubst %, %.dep, $(MMLLAR))
 EVL-FILES = $(patsubst %, %.evl, $(MMLLAR))
@@ -26,4 +26,5 @@ evls: $(EVL-FILES)
 
 %.dep: %.evl
 	@$(ECHO) $(dep-tag) $*;
-	@xsltproc ../xsl/evl2dep.xsl $*.evl | ../.perl/duplicates.pl > $*.dep;
+	@xsltproc ../xsl/evl2dep1.xsl $*.evl | ../.perl/duplicates1.pl > $*.dep;
+#	@xsltproc ../xsl/evl2dep.xsl $*.evl | ../.perl/duplicates.pl > $*.dep;
