--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -74,7 +74,7 @@ MIRROR=
 CGILIB=/usr/lib/cgi-bin
 
 APACHE_ROOT=
-HTTPD_CONF_DIR=$(APACHE_ROOT)/etc/apache2
+HTTPD_CONF_DIR=$(APACHE_ROOT)/etc/apache2/sites-enabled
 PUBLIC_MWIKI_USER=mwiki
 
 # name and email for the web commits; note that this goes only into backend
@@ -264,12 +264,7 @@ clean:
 	rm -f $(APACHE_ROOT)/etc/apache2/sites-enabled/gitweb
 	rm -f $(APACHE_ROOT)/var/log/apache2/gitweb.error.log
 	rm -f $(APACHE_ROOT)/var/log/apache2/gitweb.access.log
-	rm -f $(CGILIB)/mwiki/mwiki.cgi
-	if [ -e $(HTTPD_CONF_DIR)/mods-available/dir.conf.original ]; then \
-	  rm -f $(HTTPD_CONF_DIR)/mods-available/dir.conf; \
-	  mv $(HTTPD_CONF_DIR)/mods-available/dir.conf.original \
-	     $(HTTPD_CONF_DIR)/mods-available/dir.conf; \
-	fi
 	apache2ctl restart
 	sv down git-daemon
+	-mv -f /etc/sv/git-daemon/run.original /etc/sv/git-daemon/run
 	sv up git-daemon
